style fix for visibility and size

--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@ Template: 	simple-bootstrap
     align-content: center;
     vertical-align: middle;
     text-align: center;
-    font-size: 500%;
+    font-size: 60px;
     width: 100%;
     color: rgba(255, 255, 255, 0.6);
+    z-index: 999;
 }
 
 /** Shrink podcast titles **/
